@@ -8,7 +8,7 @@
         description="Remove linguaplone_various import step from import registry."
         source="2.0"
         destination="2.1"
-        handler="Products.LinguaPlone.migrations.remove_old_import_step"
+        handler="Products.LinguaPlone.upgrades.remove_old_import_step"
         profile="Products.LinguaPlone:LinguaPlone" />
 
     <genericsetup:upgradeStep
@@ -16,7 +16,7 @@
         description="Add Language as metadata to the reference catalog."
         source="2.4"
         destination="3"
-        handler="Products.LinguaPlone.migrations.add_language_metadata"
+        handler="Products.LinguaPlone.upgrades.add_language_metadata"
         profile="Products.LinguaPlone:LinguaPlone" />
 
     <genericsetup:upgradeStep
@@ -24,7 +24,7 @@
         description="Add Language as an index to the uid catalog."
         source="2.4"
         destination="3"
-        handler="Products.LinguaPlone.migrations.add_uid_language_index"
+        handler="Products.LinguaPlone.upgrades.add_uid_language_index"
         profile="Products.LinguaPlone:LinguaPlone" />
 
     <genericsetup:upgradeStep
@@ -32,7 +32,7 @@
         description="Base language vocabularies on the supported site languages"
         source="3"
         destination="4"
-        handler="Products.LinguaPlone.migrations.add_synced_vocabularies"
+        handler="Products.LinguaPlone.upgrades.add_synced_vocabularies"
         profile="Products.LinguaPlone:LinguaPlone" />
 
     <genericsetup:upgradeStep
@@ -40,7 +40,7 @@
         description="Add properties sheet for LP specific configuration"
         source="4"
         destination="5"
-        handler="Products.LinguaPlone.migrations.add_properties_sheet"
+        handler="Products.LinguaPlone.upgrades.add_properties_sheet"
         profile="Products.LinguaPlone:LinguaPlone" />
 
 </configure>
